# bidwatch

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/: launch.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_tenant_system_subscriptions.py  003_add_nara_prespec_source.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  keyword.py  notice.py  notification.py  profile.py  scraper.py  subscription.py  tag.py  tenant.py
backend/app/routers/: admin.py  auth.py  keywords.py  notices.py  sources.py  tags.py
backend/app/schemas/: admin.py  auth.py  keyword.py  notice.py  source.py  tag.py
backend/app/services/: auth.py  collection.py  notice.py  scraper_ai.py  source.py
backend/app/tasks/: analyze_url.py  celery_app.py  collect_api.py  collect_scraper.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_sources.py
docs/: api_spec.md  bid-collectors-detail-api-spec.md  db_schema.md  dev_reference.md  interface.md  roadmap.md  system_design.md
docs/work_log/: phase1_1_to_1_3.md  phase1_4.md  phase1_5_prespec.md  phase1_6_refactoring.md  phase1_7_tags.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/lib/: api.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
prototype/: dashboard.html  notices.html
(+19 files in other folders)
